--- a/login.html
+++ b/login.html
@@ -26,8 +26,8 @@
       <main class="form-signin">
         <form >
           <img class="mb-4" src="img/login.png" alt="" width="100%" height="100%">
-          <h1 class="h3 mb-3 fw-normal">Inicio de sesión</h1>
-          <br>
+          <h4 class="h3 mb-3 fw-normal">Inicio de sesión</h4>
+
           <label for="floatingInput" class="form-label">Email</label>
           <div class="form-floating">
             <input type="email" class="form-control" id="floatingInput" placeholder="Email">
@@ -53,6 +53,10 @@
       
     </div>
   </main>
+  <div style="visibility: hidden;" id="alertred" class="alert alert-danger" role="alert">
+    Fallo al validar su informacion
+  </div>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
