--- a/products.html
+++ b/products.html
@@ -43,7 +43,8 @@
 -->      
 
   <div class="text-center p-4">
-      <h2>Listado</h2>
+      <h2>Productos</h2>
+      <p>Verás aquí todos los productos de la categoría Autos</p>
   </div>
   <div class="container">
       <div class="row">
