--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
 <body>
   <main class="mt-5">
     <div class="container text-center">
-<!--       <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div> -->
       <!-- Aqui empieza el formulario de inicio tomado de bootsrap -->
       <main class="form-signin">
         <form >
@@ -42,8 +39,9 @@
           <br>
 
         </form>
-        <button class="w-45 btn btn-sm btn-primary" type="submit" id="btninicio">ingresar</button>
         
+        <button class="w-45 btn btn-sm btn-primary" type="submit" id="btninicio">ingresar</button>
+        <!-- Google Atenticador -->
         <div id="g_id_onload"
         data-client_id="339456878556-0925c0mngtigk9458dfuohje9hbkmil1.apps.googleusercontent.com"
         data-callback="loginGoogle">
@@ -51,7 +49,6 @@
         <div class="g_id_signin" data-type="standard"></div>
         
         <script src="https://accounts.google.com/gsi/client" async defer></script>
-  
   
   
       </main>
@@ -76,7 +73,7 @@
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
   </footer>
-  <script src="js/login.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
