--- a/product-info.html
+++ b/product-info.html
@@ -31,6 +31,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="index.html" id="userProfileName">Login</a>
           </li>
         </ul>
       </div>
@@ -64,6 +65,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
+  <script src="js/perfil.js"></script>
 </body>
 
 </html>
