--- a/categories.html
+++ b/categories.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item"> 
-            <a class="nav-link" href="index.html">login</a>
+            <a class="nav-link" href="index.html" id="userProfileName">login</a>
           </li>
         </ul>
       </div>
@@ -103,6 +103,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/categories.js"></script>
+  <script src="js/perfil.js"></script>
 </body>
 
 </html>
