--- a/portada.html
+++ b/portada.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Login</a>
+            <a class="nav-link" href="index.html" id="userProfileName">Login</a>
           </li>
         </ul>
       </div>
@@ -91,6 +91,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/portada.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/perfil.js"></script>
 </body>
 
 </html>
