--- a/sell.html
+++ b/sell.html
@@ -30,7 +30,7 @@
             <a class="nav-link active" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">login</a>
+            <a class="nav-link" href="index.html" id="userProfileName">login</a>
 
           </li>
         </ul>
@@ -229,6 +229,7 @@
   <script src="js/dropzone.js"></script>
   <script src="js/init.js"></script>
   <script src="js/sell.js"></script>
+  <script src="js/perfil.js"></script>
 </body>
 
 </html>
