--- a/products.html
+++ b/products.html
@@ -51,6 +51,7 @@
 <div class="row">
   <div class="col text-end">
     <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
+      <input type="search" id="searchProduct" class="form-control" placeholder="Buscar..." aria-label="Search" >
       <input type="radio" class="btn-check" name="options" id="sortAsc">
       <label class="btn btn-light" for="sortAsc"><i class="fas fa-sort-amount-down mr-1">$</i></label>
       <input type="radio" class="btn-check" name="options" id="sortDesc">
