--- a/product-info.html
+++ b/product-info.html
@@ -71,7 +71,8 @@
 
         <p id="tituloComentar">Comentar</p>
         <p id="subtituloComentar">Tu Opinión:</p>
-        <textarea name="" id="" cols="60" rows="5"></textarea>
+
+        <textarea name="commentArea" id="textAreaCom" cols="60" rows="5" ></textarea>
         <p>Tu puntación:</p>
 
         <select id="puntajes">
@@ -82,7 +83,9 @@
           <option value="1"> 1 </option>
           <option value="0"> 0 </option>
         </select>
-  
+        <div>
+          <button id="enviarCom" type="button" class="btn btn-primary" onclick="agregoLista()">Enviar</button>
+        </div>
 
 
 
