--- a/cart.html
+++ b/cart.html
@@ -29,8 +29,20 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-          </li>
+          <div>
+            <li class="nav-item">
+            
+              <li class="dropdown">
+                <a class="nav-link dropdown-toggle userProfileName" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                  <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
+                  <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
+                  <li><a class="dropdown-item" href="index.html">Cerrar sesión</a></li>
+                </ul>
+            </li>
+          </div>
         </ul>
       </div>
     </div>
@@ -63,6 +75,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/cart.js"></script>
+  <script src="js/perfil.js"></script>
 </body>
 
 </html>
