--- a/my-profile.html
+++ b/my-profile.html
@@ -28,7 +28,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
-    <div class="container">
+    <div class="container" >
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -44,8 +44,20 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-          </li>
+          <div>
+            <li class="nav-item">
+            
+              <li class="dropdown">
+                <a class="nav-link dropdown-toggle userProfileName" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                  <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
+                  <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
+                  <li><a class="dropdown-item" href="index.html">Cerrar sesión</a></li>
+                </ul>
+            </li>
+          </div>
         </ul>
       </div>
     </div>
@@ -58,7 +70,7 @@
     </div>
   </main>
   <footer class="text-muted">
-    <div class="container">
+    <div class="container" >
       <p class="float-end">
         <a href="#">Volver arriba</a>
       </p>
@@ -71,6 +83,7 @@
   <script src="js/init.js"></script>
   <script src="js/my-profile.js"></script>
   <script src="js/perfil.js"></script>
+  
 </body>
 
 </html>
