--- a/product-info.html
+++ b/product-info.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -49,6 +50,12 @@
     </div>
   </nav>
   <main>
+
+
+    <div id="irCarrito" class="alert alert-primary d-none" role="alert">
+      Ya tienes este producto en el carrito <a href="cart.html" class="alert-link">¡Ir al carrito!</a>. 
+    </div>
+
     <div class="container" id="productInfo">
 
 
