--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <main class="form-signin">
         <form >
           <img class="mb-4" src="img/login.png" alt="" width="100%" height="100%">
-          <h4 class="h3 mb-3 fw-normal">Inicio de sesión</h4>
+          <h4 class="h3 mb-3 fw-normal">Inicio de sesión(NO REQUIERE REGISTRO)</h4>
 
           <label for="floatingInput" class="form-label">Email</label>
           <div class="form-floating">
